--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -18,11 +18,6 @@
 }
 @media (max-width: 767px) {
   .container {
-    width: 96%;
-  }
-}
-@media (max-width: 575px) {
-  .container {
     width: 100%;
   }
 }
@@ -76,7 +71,7 @@ nav .nav__app .f__logo p {
   font-size: 20px;
   letter-spacing: 3px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   nav .nav__app .f__logo p {
     font-size: 20px;
     letter-spacing: 2px;
@@ -105,14 +100,22 @@ nav .nav__app .ul__app ul {
 nav .nav__app .ul__app ul li {
   list-style: none;
   margin: 0 10px;
+  padding: 5px;
   font-size: 13px;
   font-weight: 600;
   color: #fff;
+  border-radius: 5px;
   cursor: pointer;
+}
+nav .nav__app .ul__app ul li:hover {
+  background-color: rgb(207, 207, 207);
 }
 nav .nav__app .ul__app ul li a {
   text-decoration: none;
   color: black;
+}
+nav .nav__app .ul__app ul li a:hover {
+  color: rgb(44, 46, 45);
 }
 nav .nav__app .icon__nav {
   display: none;
@@ -132,11 +135,13 @@ nav .ul__phone {
   top: -300px;
   position: absolute;
   width: 100%;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  display: none;
 }
 @media (max-width: 767px) {
   nav .ul__phone {
+    display: block;
     background-color: rgb(51, 219, 141);
   }
   nav .ul__phone ul {
