--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -3,8 +3,7 @@
 @use './sass/colors' as *;
 
 // fonts
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700;900&family=Lobster&family=Open+Sans:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,700;1,900&display=swap');
 
 // GLOBAL RULES
 *{
@@ -190,5 +189,57 @@ header{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+header .head{
+    @include flex(column, center , start);
+    height: calc(100vh - 40px);
+    width: 400px;
+    @include breakpoints(small){
+        width: 100%;
+        padding: 0 10px;
+    }
+    @include breakpoints(xlarge){
+        width: 40%;
+    }
+    h1{
+        font-family: 'Lato', sans-serif;
+        font-weight: 900;
+        font-size: 50px;
+        color: $second-color;
+        margin-bottom: 20px;
+        @include breakpoints(small){
+            font-size: 40px;
+            text-align: center;
+        }
+    }
+    p{
+        font-size: 20px;
+        text-align: justify;
+        text-align-last:center ;
+        color: $light-grey;
+        margin-bottom: 20px;
+        @include breakpoints(small){
+            font-size: 15px;
+        }
+    }
+    a{
+    @include breakpoints(small){
+        margin: 0 auto;
+    }
+        button{
+            padding: 10px 40px;
+            border-radius: 30px;
+            width: 100%;
+            border: none;
+            outline: none;
+            background-color: $third-color;
+            color: $light-grey;
+            font-size: 15px;
+            cursor: pointer;
+            &:hover{
+                background-color: $green-color;
+            }
+        }
+    }
 }
 
