--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,8 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
 
@@ -16,28 +15,19 @@
     width: 90%;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 779px) {
   .container {
     width: 100%;
   }
 }
 
 nav .nav__app {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-@media (max-width: 767px) {
+@media (max-width: 779px) {
   nav .nav__app {
     padding: 5px;
     z-index: 100;
@@ -46,19 +36,10 @@ nav .nav__app {
   }
 }
 nav .nav__app .f__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 nav .nav__app .f__logo .logo {
   width: 40px;
@@ -74,46 +55,28 @@ nav .nav__app .f__logo p {
   letter-spacing: 3px;
   color: #5a4b3c;
 }
-@media (max-width: 767px) {
+@media (max-width: 779px) {
   nav .nav__app .f__logo p {
     font-size: 20px;
     letter-spacing: 2px;
   }
 }
 nav .nav__app .ul__app {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-@media (max-width: 767px) {
+@media (max-width: 779px) {
   nav .nav__app .ul__app {
     display: none;
   }
 }
 nav .nav__app .ul__app ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 nav .nav__app .ul__app ul li {
   list-style: none;
@@ -152,7 +115,7 @@ nav .nav__app .ul__app a button:hover {
 nav .nav__app .icon__nav {
   display: none;
 }
-@media (max-width: 767px) {
+@media (max-width: 779px) {
   nav .nav__app .icon__nav {
     display: block;
     font-size: 2rem;
@@ -175,29 +138,19 @@ nav .ul__phone {
   position: absolute;
   z-index: 1;
   width: 100%;
-  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   display: none;
 }
-@media (max-width: 767px) {
+@media (max-width: 779px) {
   nav .ul__phone {
     display: block;
     background-color: #fff;
   }
   nav .ul__phone ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
   }
   nav .ul__phone ul li {
     list-style: none;
@@ -205,19 +158,10 @@ nav .ul__phone {
     font-size: 15px;
     font-weight: 600;
     width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     color: #fff;
     cursor: pointer;
   }
@@ -242,23 +186,14 @@ header {
 }
 
 header .head {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
   height: calc(100vh - 40px);
   width: 400px;
 }
-@media (max-width: 767px) {
+@media (max-width: 779px) {
   header .head {
     width: 100%;
     padding: 0 10px;
@@ -276,10 +211,11 @@ header .head h1 {
   color: #5a4b3c;
   margin-bottom: 20px;
 }
-@media (max-width: 767px) {
+@media (max-width: 779px) {
   header .head h1 {
-    font-size: 40px;
+    font-size: 35px;
     text-align: center;
+    margin-top: -10rem;
   }
 }
 header .head p {
@@ -290,12 +226,15 @@ header .head p {
   color: #f0faf9;
   margin-bottom: 20px;
 }
-@media (max-width: 767px) {
+@media (max-width: 779px) {
   header .head p {
     font-size: 15px;
+    padding: 5px;
+    border-radius: 7px;
+    background: linear-gradient(90deg, rgba(246, 253, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 779px) {
   header .head a {
     margin: 0 auto;
   }
@@ -306,11 +245,11 @@ header .head a button {
   width: 100%;
   border: none;
   outline: none;
-  background-color: #7cbda0;
-  color: #f0faf9;
+  background-color: #ab8917;
+  color: #f0d4b6;
   font-size: 15px;
   cursor: pointer;
 }
 header .head a button:hover {
   background-color: #679e79;
-}
+}/*# sourceMappingURL=home.css.map */
