--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -208,8 +208,9 @@ header .head{
         color: $second-color;
         margin-bottom: 20px;
         @include breakpoints(small){
-            font-size: 40px;
+            font-size: 35px;
             text-align: center;
+            margin-top: -10rem;
         }
     }
     p{
@@ -220,6 +221,9 @@ header .head{
         margin-bottom: 20px;
         @include breakpoints(small){
             font-size: 15px;
+            padding: 5px;
+            border-radius: 7px;
+            background: linear-gradient(90deg, rgba(246,253,255,0) 0%, rgba(0,0,0,0.8) 100%);;
         }
     }
     a{
@@ -232,8 +236,8 @@ header .head{
             width: 100%;
             border: none;
             outline: none;
-            background-color: $third-color;
-            color: $light-grey;
+            background-color: $gold-color;
+            color: $pink-color;
             font-size: 15px;
             cursor: pointer;
             &:hover{
