--- a/assets/css/sass/_colors.scss
+++ b/assets/css/sass/_colors.scss
@@ -4,6 +4,6 @@ $second-color : #5a4b3c;
 $third-color : #7cbda0;
 $green-color: #679e79;
 $dark-green-color: #213b27;
-$pink-color: #f0d4b6;
+$pink-color: #e9b6f0;
 $gold-color: #ab8917;
 $light-grey: #f0faf9;
