--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -6,19 +6,8 @@
   font-family: "Poppins", sans-serif;
 }
 
-.container {
-  width: 80%;
-  margin: 0 auto;
-}
-@media (max-width: 991px) {
-  .container {
-    width: 90%;
-  }
-}
-@media (max-width: 779px) {
-  .container {
-    width: 100%;
-  }
+body {
+  background-color: #eee;
 }
 
 nav .nav__app {
@@ -244,12 +233,94 @@ header .head a button {
   border-radius: 30px;
   width: 100%;
   border: none;
+  font-weight: bold;
   outline: none;
-  background-color: #ab8917;
-  color: #f0d4b6;
+  background-color: #679e79;
+  color: black;
   font-size: 15px;
   cursor: pointer;
 }
 header .head a button:hover {
-  background-color: #679e79;
+  background-color: #7cbda0;
+}
+
+.p-title {
+  color: #5a4b3c;
+  font-size: 30px;
+  text-align: center;
+  font-weight: 600;
+}
+
+.p__head {
+  color: black;
+  font-size: 50px;
+  font-family: "lato";
+  text-align: center;
+  font-weight: 600;
+}
+
+.services__ {
+  display: block;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+@media (max-width: 779px) {
+  .services__ {
+    display: none;
+  }
+}
+
+.one__service {
+  padding: 10px 30px;
+  background-color: #92a98f;
+  border-radius: 20px;
+  width: 260px;
+}
+@media (max-width: 779px) {
+  .one__service {
+    width: 250px;
+  }
+}
+.one__service .icon__service {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.one__service .icon__service i {
+  font-size: 50px;
+  color: #5a4b3c;
+}
+.one__service .content__service {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.one__service .content__service h3 {
+  font-size: 18px;
+  font-weight: 600;
+  color: #eee;
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+.one__service .content__service p {
+  text-align: justify;
+  -moz-text-align-last: center;
+       text-align-last: center;
+  color: #fff;
+  font-size: 13px;
+  font-weight: 600;
+  letter-spacing: 1.3;
+}
+
+.phone__services {
+  display: none;
+}
+@media (max-width: 779px) {
+  .phone__services {
+    display: block;
+  }
 }/*# sourceMappingURL=home.css.map */
