--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -13,15 +13,8 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.container{
-    width: 80%;
-    margin: 0 auto;
-    @include breakpoints(medium){
-        width: 90%;
-    }
-    @include breakpoints(small){
-        width: 100%;
-    }
+body{
+    background-color: #eee;
 }
 
 
@@ -235,15 +228,84 @@ header .head{
             border-radius: 30px;
             width: 100%;
             border: none;
+            font-weight: bold;
             outline: none;
-            background-color: $gold-color;
-            color: $pink-color;
+            background-color: $green-color;
+            color: black;
             font-size: 15px;
             cursor: pointer;
             &:hover{
-                background-color: $green-color;
+                background-color: $third-color;
             }
         }
     }
+}
+
+.p-title{
+    color: $second-color;
+    font-size: 30px;
+    text-align: center;
+    font-weight: 600;
+}
+.p__head{
+    color: black;
+    font-size: 50px;
+    font-family: 'lato';
+    text-align: center;
+    font-weight: 600;
+}
+.services__{
+    display: block;
+    @include breakpoints(small){
+        display: none;
+    }
+    @include flex(row, space-evenly , flex-start);
+    
+}
+.one__service{
+    padding: 10px 30px;
+    background-color: $main-dark-color;
+    border-radius: 20px;
+    width: 260px;
+    @include breakpoints(small){
+        width: 250px;
+    }
+    .icon__service{
+        @include flex(row, center ,center);
+        i{
+            font-size: 50px;
+            color: $second-color;
+        }
+        
+    }
+    .content__service{
+        @include flex(column, center ,center);
+        h3{
+            font-size: 18px;
+            font-weight: 600;
+            color: #eee;
+            margin: {
+                top: 0px;
+                bottom: 10px;
+            };
+        }
+        p{
+            text-align: justify;
+            text-align-last: center;
+            color: #fff;
+            font-size: 13px;
+            font-weight: 600;
+            letter-spacing: 1.3;
+        }
+    }
+
+}
+.phone__services{
+    // show only in small devices
+    display: none;
+    @include breakpoints(small){
+        display: block;
+    }
+
 }
 
