--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -263,7 +263,7 @@ header .head a button:hover {
   display: block;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: flex-start;
 }
 @media (max-width: 779px) {
@@ -273,10 +273,10 @@ header .head a button:hover {
 }
 
 .one__service {
-  padding: 10px 30px;
+  padding: 10px 25px;
   background-color: #92a98f;
   border-radius: 20px;
-  width: 260px;
+  width: 220px;
 }
 @media (max-width: 779px) {
   .one__service {
@@ -312,7 +312,7 @@ header .head a button:hover {
        text-align-last: center;
   color: #fff;
   font-size: 13px;
-  font-weight: 600;
+  font-weight: 500;
   letter-spacing: 1.3;
 }
 
@@ -323,4 +323,121 @@ header .head a button:hover {
   .phone__services {
     display: block;
   }
+}
+
+.about__ {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.about__ .img {
+  width: 300px;
+  height: 400px;
+  position: relative;
+}
+.about__ .img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-left: 10px;
+  position: relative;
+  z-index: 2;
+}
+@media (max-width: 779px) {
+  .about__ .img {
+    display: none;
+  }
+}
+.about__ .img::before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: -15px;
+  left: -15px;
+  height: 430px;
+  width: 60px;
+  background-color: black;
+}
+.about__ .img::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: -27px;
+  left: -15px;
+  height: 44px;
+  width: 350px;
+  background-color: black;
+}
+.about__ .text {
+  width: 50%;
+  height: 450px;
+  background-color: #92a98f;
+  border-radius: 20px;
+  padding: 25px;
+  text-align: justify;
+  -moz-text-align-last: center;
+       text-align-last: center;
+}
+@media (max-width: 779px) {
+  .about__ .text {
+    width: 90%;
+    margin: 0 auto;
+    height: 100%;
+    margin-top: 20px;
+  }
+}
+
+.contact {
+  background-color: #eee;
+  padding-bottom: 80px;
+}
+.contact .contact__form {
+  padding: 20px;
+  width: 70%;
+  margin: 0 auto;
+}
+.contact .contact__form .form__group label {
+  font-size: 13px;
+  padding-left: 20px;
+  font-weight: 600;
+  color: #5a4b3c;
+}
+.contact .contact__form .form__group input {
+  width: 100%;
+  padding: 10px 20px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.contact .contact__form .form__group textarea {
+  width: 100%;
+  padding: 10px 20px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.contact .contact__form .submit_btn {
+  float: right;
+}
+.contact .contact__form .submit_btn button {
+  padding: 10px 40px;
+  border-radius: 30px;
+  border: none;
+  font-weight: bold;
+  outline: none;
+  background-color: #679e79;
+  color: black;
+  font-size: 15px;
+  cursor: pointer;
+}
+.contact .contact__form .submit_btn button:hover {
+  background-color: #7cbda0;
 }/*# sourceMappingURL=home.css.map */
