--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -259,14 +259,14 @@ header .head{
     @include breakpoints(small){
         display: none;
     }
-    @include flex(row, space-evenly , flex-start);
+    @include flex(row, space-between , flex-start);
     
 }
 .one__service{
-    padding: 10px 30px;
+    padding: 10px 25px;
     background-color: $main-dark-color;
     border-radius: 20px;
-    width: 260px;
+    width: 220px;
     @include breakpoints(small){
         width: 250px;
     }
@@ -294,7 +294,7 @@ header .head{
             text-align-last: center;
             color: #fff;
             font-size: 13px;
-            font-weight: 600;
+            font-weight: 500;
             letter-spacing: 1.3;
         }
     }
@@ -307,5 +307,117 @@ header .head{
         display: block;
     }
 
+}
+
+.about__{
+    @include flex(row, space-between , center);
+    .img{
+        width: 300px;
+        height: 400px;
+        position: relative;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            margin-left: 10px;
+            position: relative;
+            z-index: 2;
+        }
+        @include breakpoints(small){
+            display: none;
+        }
+    }
+    .img::before {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: -15px;
+        left: -15px;
+        height: 430px;
+        width: 60px;
+        background-color: black;
+    }
+    .img::after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        bottom: -27px;
+        left: -15px;
+        height: 44px;
+        width: 350px;
+        background-color: black;
+    }
+    .text{
+        width: 50%;
+        height: 450px;
+        background-color: $main-dark-color;
+        border-radius: 20px;
+        padding: 25px;
+        text-align: justify;
+        text-align-last: center;
+        @include breakpoints(small){
+            width: 90%;
+            margin: 0 auto;
+            height: 100%;
+            margin-top: 20px;
+        }
+    }
+}
+
+.contact{
+    background-color:#eee;
+    padding-bottom: 80px;
+    .contact__form{
+        padding: 20px;
+        width: 70%;
+        margin: 0 auto;
+        .form__group{
+            label{
+                font-size: 13px;
+                padding-left: 20px;
+                font-weight: 600;
+                color: $second-color;
+                // width: ;
+            }
+            input{
+                width: 100%;
+                padding: 10px 20px;
+                border-radius: 20px;
+                border: none;
+                outline: none;
+                font-size: 15px;
+                font-weight: 500;
+                margin-bottom: 20px;
+            }
+            textarea{
+                width: 100%;
+                padding: 10px 20px;
+                border-radius: 20px;
+                border: none;
+                outline: none;
+                font-size: 15px;
+                font-weight: 500;
+                margin-bottom: 20px;
+            }
+            
+        }
+        .submit_btn{
+            float: right;
+            button{
+                padding: 10px 40px;
+                border-radius: 30px;
+                border: none;
+                font-weight: bold;
+                outline: none;
+                background-color: $green-color;
+                color: black;
+                font-size: 15px;
+                cursor: pointer;
+                &:hover{
+                    background-color: $third-color;
+                }
+            }
+        }
+    }
 }
 
