--- a/fortify/public/css/home.css
+++ b/fortify/public/css/home.css
@@ -125,7 +125,7 @@ nav .show {
 nav .ul__phone {
   top: -300px;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   transition: all 0.5s;
   display: none;
@@ -440,4 +440,20 @@ header .head a button:hover {
 }
 .contact .contact__form .submit_btn button:hover {
   background-color: #7cbda0;
+}
+
+.alert-danger {
+  --tw-text-opacity: 1;
+  color: rgb(153, 27, 27);
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding: 1rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(254, 242, 242);
+  --tw-border-opacity: 1;
+  border-color: rgb(252, 165, 165);
+  border-width: 1px;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }/*# sourceMappingURL=home.css.map */
